force-app/main/default/objects/Client_Contract__c/Client_Contract__c.object-meta.xml
<CustomObject>
    <description>Junction between Shared Solar System and Contract to allow effective dating contracts (e.g. future dated amendments).</description>
    <label>Project Contract</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Project Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>