force-app/main/default/objects/Client_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Client Contract related to the Shared Solar System. Required to be a Contract with the Client Contract record type.</inlineHelpText>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Contract needs to be a Client Contract record type</errorMessage>
        <filterItems>
            <field>Contract.RecordType.Name</field>
            <operation>equals</operation>
            <value>Client Contract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Client_Contract_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>