force-app/main/default/objects/Client_Contract__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Contract__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related Contract&apos;s End Date</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>