force-app/main/default/objects/Client_Contract__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related Contract&apos;s Start Date</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>