force-app/main/default/objects/Client_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>TEXT(Contract__r.Contract_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related Contract&apos;s &quot;Contract Type&quot;</inlineHelpText>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>