force-app/main/default/objects/Client_Contract__c/fields/CS_Services_Type__c.field-meta.xml
<CustomField>
    <fullName>CS_Services_Type__c</fullName>
    <inlineHelpText>Indicates how this Contract should be used for Client Invoicing, and which fields (Client Acquisition Contract and Client Management Contract) are populated on the System.</inlineHelpText>
    <label>CS Services Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>CS_Services_Type</valueSetName>
        
        </valueSet>
</CustomField>