force-app/main/default/objects/Client_Contract__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>At the beginning of this day, the system will automatically populate the Shared Solar System with the related Contract according to the CS Services Type to be used for Client Invoicing.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>