force-app/main/default/objects/Client_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>At the end of this day, the contract will be automatically removed from the System (unless there is a subsequent Client Contract) and no longer used for client invoicing. Can be different from the Contract&apos;s End Date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>