force-app/main/default/objects/Client_Contract__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Shared Solar System related to this Contract.</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipName>Client_Contract_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>