force-app/main/default/objects/Client_Contract__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <inlineHelpText>Usually the Effective Date on this record is the date the contract or amendment is signed by the client, but in some cases, we start work on before the date (the Effective Date) the contract is signed. If this is blank, then the Signed Date is the same as the Effective Date</inlineHelpText>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>